Fix bug in signature parser